# palmtop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
android/: .gitignore  settings.gradle.kts
android-spike/: AndroidManifest.xml  FROZEN.md  build.sh
android-spike/src/dev/palmtop/spike/: HostDiscovery.java  Keycodes.java  MainActivity.java  Protocol.java
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/palmtop/client/: AspectMode.java  ConnectionState.java  CursorDriver.java  DeviceProfile.java  DeviceStore.java  HostDiscovery.java  HudView.java  JoystickView.java  Keycodes.java  LatencyTracker.java  MainActivity.java  Modes.java  ModifierLatch.java  NetworkCheck.java  NoiseTransport.java  PairedDevice.java  PinchZoomController.java  PinchZoomMath.java  Protocol.java  QrOverlayView.java  QrScanActivity.java  SessionLog.java  Ui.java  UsbSetupStatus.java  VideoFit.java
android/app/src/main/java/dev/palmtop/spike/: AspectMode.java  ConnectionState.java  HostDiscovery.java  HudView.java  LatencyTracker.java  MainActivity.java  Modes.java  NoiseTransport.java  PinchZoomController.java  PinchZoomMath.java  Protocol.java  QrOverlayView.java  QrScanActivity.java  VideoFit.java
android/app/src/main/res/values/: themes.xml
android/app/src/test/java/dev/palmtop/client/: CursorDriverTest.java  JoystickViewTest.java  KeycodesTest.java  LatencyTrackerTest.java  ModifierLatchTest.java  NetworkCheckTest.java  PairedDeviceTest.java  PinchZoomMathTest.java  VideoFitTest.java
android/app/src/test/java/dev/palmtop/spike/: LatencyTrackerTest.java  PinchZoomMathTest.java  VideoFitTest.java
config/: .gitignore  README.md  host.example.toml
config/devices/: example.toml
crates/palmtop-config/: Cargo.toml
crates/palmtop-config/src/: lib.rs
crates/palmtop-proto/: Cargo.toml
crates/palmtop-proto/src/: lib.rs  noise.rs
crates/palmtop-test-client/: Cargo.toml
crates/palmtop-test-client/src/: main.rs
crates/palmtopd/: Cargo.toml
crates/palmtopd/src/: capture.rs  diagnostics.rs  doctor.rs  encode.rs  input.rs  main.rs  modes.rs  pairing.rs  session.rs
crates/palmtopd/src/platform/: mod.rs
crates/palmtopd/src/platform/linux/: capture.rs  doctor.rs  mod.rs
crates/palmtopd/src/platform/windows/: capture.rs  doctor.rs  input.rs  keymap.rs  mod.rs
crates/spike-capture-encode/: Cargo.toml
crates/spike-capture-encode/src/: main.rs
crates/spike-capture-latency/: Cargo.toml
crates/spike-capture-latency/src/: main.rs
crates/spike-h264-server/: Cargo.toml
crates/spike-h264-server/src/: main.rs
crates/spike-portal-capture/: Cargo.toml
crates/spike-portal-capture/src/: main.rs
crates/spike-wlr-input/: Cargo.toml
crates/spike-wlr-input/src/: main.rs
docs/: WALKTHROUGH.md
docs/superpowers/plans/: 2026-07-22-streaming-sync-modes.md  2026-07-23-touch-controls-and-settings.md
docs/superpowers/specs/: 2026-07-22-streaming-sync-modes-design.md  2026-07-23-touch-controls-and-settings-design.md
scripts/: choose-encoder.sh  connect-device.sh  device.sh  host-config.sh  install-service.sh  install.ps1  install.sh  measure-latency.sh  pair-usb.sh  probe-device.sh  probe-host.sh  run-client.sh  run-decode-spike.sh  show-pair-qr.sh  uninstall.ps1  uninstall.sh
systemd/: palmtopd.service
