[package]
name = "palmtop-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Loads local host/device profiles from config/, so no machine- or device-specific values live in code."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
palmtop-proto = { path = "../palmtop-proto" }
