[package]
name = "palmtopd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host daemon: continuous portal capture -> VA-API encode -> network stream, with wlr tier-2 input injection driven by the connected client."

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
mdns-sd = "0.20"
qrcode = "0.14"
# std::net::TcpStream exposes neither SO_SNDBUF (the one pipeline stage
# "never queue" was not reaching -- see session::set_send_buffer) nor TCP
# keepalive (without which a phone that sleeps or loses Wi-Fi wedges a
# session forever -- see session::configure_socket). The "all" feature is
# what gates keepalive retry counts on Linux, and TCP keepalive on Windows.
socket2 = { version = "0.5", features = ["all"] }
palmtop-config = { path = "../palmtop-config" }
palmtop-proto = { path = "../palmtop-proto" }

# Portal screen capture, PipeWire, and wlr virtual-input are all
# Linux/Wayland-specific -- see platform::linux. Nothing here links or even
# compiles on another target.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
pipewire = "0.10"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
xkbcommon = "0.8"

# SendInput (platform::windows::input) and Windows.Graphics.Capture +
# D3D11 (platform::windows::capture). Feature list kept to exactly what
# those two files call, same reasoning as palmtop-config's windows
# dependency: less surface area to compile on a target this crate can't be
# checked against locally.
[target.'cfg(windows)'.dependencies]
# Feature names here are load-bearing in a way that is easy to get wrong:
# windows-rs gates individual *items* on the feature that provides their
# parameter/field types, not just on the module they live in. Three separate
# "not found" errors on the first real Windows build all traced back to two
# missing features rather than to wrong API names --
#   - D3D11_TEXTURE2D_DESC and ID3D11Device::CreateTexture2D are behind
#     Win32_Graphics_Dxgi_Common (the desc struct embeds DXGI_FORMAT), and
#   - Direct3D11CaptureFramePool::CreateFreeThreaded and
#     Direct3D11CaptureFrame::Surface are behind Graphics_DirectX_Direct3D11
#     (they take/return IDirect3DDevice and IDirect3DSurface).
# Deepest feature listed wins: Graphics_DirectX_Direct3D11 implies
# Graphics_DirectX, which implies Graphics.
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
] }
