[package]
name = "spike-capture-encode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase 0 spike: capture real desktop frames via the portal, then hardware-encode them with VA-API H.264 -- proves the full capture-to-encode leg of the pipeline."

[dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
pipewire = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
palmtop-config = { path = "../palmtop-config" }
