[package]
name = "spike-portal-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase 0 spike: prove xdg-desktop-portal ScreenCast -> PipeWire frame capture works on Hyprland."

[dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
pipewire = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
